k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warehouse-network
  labels:
    name: warehouse-network
    environment: production
